--- a/registros_casos_art.html
+++ b/registros_casos_art.html
@@ -56,7 +56,7 @@
 
   <div id="accessOverlay">
   <div class="access-card">
-    <img src="./imagenes/LOGO_CORREO_ARGENTINO.png" alt="Correo Argentino">
+    <img src="./assets/imagenes/LOGO_CORREO_ARGENTINO.png" alt="Logo Correo Argentino">
     <h2>Acceso restringido</h2>
     <p>Ingresá con tu cuenta Google autorizada</p>
 
@@ -253,13 +253,15 @@
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js"></script>
 
-<!-- Excel (SheetJS) -->
+<!-- Config global (window.FIREBASE_CONFIG, etc.) -->
+<script src="./js/config.js"></script>
+
+<!-- SheetJS -->
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
 <!-- App -->
-<script src="./config.js"></script>
-<script type="module" src="./firebase.js"></script>
-<script defer src="./app.js"></script>
+<script type="module" src="./js/app.js"></script>
+
 
 </body>
 </html>
